# NES_Emulator

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: test.yml
src/: ANTIGOMAIN.rs  bus.rs  cpu.rs  dummy_mapper.rs  emulator_loop.rs  lib.rs  main.rs  opcodes.rs
src/apu/: apu.rs  audio.rs  mod.rs  noise.rs  square.rs  triangle.rs
src/cpu/: build_undocumented.rs  cpu.rs  opcodes.rs
src/cpu/archive/: 6502_all_opcodes.json  unofficial_instr_to_opcodes.json
src/debug/: cpu_debug.rs  mod.rs  ppu_debug.rs
src/engine/: config.rs  console.rs  input.rs  instance.rs  mod.rs  state.rs  stats.rs
src/frontend/: app.rs  dock_state.rs  glstate.rs  mod.rs  nes_texture.rs  typing_path.rs
src/frontend/panels/: app_terminal.rs  cpu_viewer.rs  memory_viewer.rs  mod.rs  open_rom.rs  pattern_table_viewer.rs  settings_panel.rs  typing_path.rs
src/frontend/panels/ppu_viewer/: mod.rs  palette_viewer.rs  pattern_viewer.rs
src/memory/: bus.rs  dummy_mapper.rs  game_save.rs  joypads.rs  mapper_base.rs  mappers.rs  mod.rs
src/memory/mappers/: dummy_mapper.rs  ines_mapper000.rs  ines_mapper001.rs  ines_mapper002.rs  ines_mapper003.rs  ines_mapper004.rs  ines_mapper163.rs  mod.rs
src/menu/: menu.rs
src/ppu/: frame.rs  mod.rs  palettes.rs  ppu.rs  ppu_old.rs  ppuaddr.rs  ppubus.rs  registers.rs
src/ui/: app.rs  glstate.rs  menu.rs  mod.rs  pause_menu.rs
tests/: nestest.rs
